# IronBot

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/playground/: MainActivity.kt  PlaygroundApplication.kt
app/src/main/java/com/example/playground/network/: AIImageService.kt  ApiKeyCombiner.kt  DecryptorCaller.kt
app/src/main/java/com/example/playground/ui/components/: ChatBubble.kt  FullScreenImageViewer.kt  ImageView.kt  SendButton.kt  TextField.kt
app/src/main/java/com/example/playground/util/: RootChecker.kt
app/src/main/java/com/example/playground/utils/: ApiKeyHelper.kt  ImageDownloader.kt
app/src/main/jni/: CMakeLists.txt  aiservice.c  api_key_combiner.c  api_key_retriever.c  keystore_decryptor.c  root_detector.c
gradle/: libs.versions.toml
